# ResumeScanner

./: .env  Setup.py  embeddings.py  main.py  pyproject.toml
