[project]
name = "resumeproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "openai>=2.16.0",
    "pandas>=3.0.0",
    "pinecone>=8.0.0",
    "pypdf>=6.6.2",
    "supabase>=2.27.2",
]
